# osuTwitchBot

./: Cargo.toml  LICENSE  README.md
src/: config.rs  first_setup.rs  main.rs  structs.rs  twitch.rs
src/twitch/: message_catcher.rs
src/twitch/message_catcher/: bancho.rs  get_memory.rs  structs.rs
src/twitch/message_catcher/get_memory/: structs.rs
