[package]
name = "reotbfosu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
twitch-irc = "5.0.0"
regex = "1.8.1"
futures = "0.3.28"
irc = "0.15.0"
egui = "0.21.0"
eframe = "0.21.3"
directories = "5.0.1"
toml = "0.7.3"
image = "0.24.2"